--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -54,13 +54,16 @@
         <link rel="stylesheet" href='{{=URL("static","css/datepicker.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/floatfixed.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/board.css")}}' />
-        <!-- chat -->
-        <link rel="stylesheet" href='{{=URL("static","css/chat.css")}}' />
         {{ elif request.function == "statistics": }}
         <link rel="stylesheet" href='{{=URL("static","css/statistics.css")}}' />
         {{ elif request.function == "team": }}
         <link rel="stylesheet" href='{{=URL("static","css/select2.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/team.css")}}' />
+        {{pass}}
+
+        {{ if not request.function == "projects": }}
+        <!-- chat -->
+        <link rel="stylesheet" href='{{=URL("static","css/chat.css")}}' />
         {{pass}}
 
     </head>
@@ -135,14 +138,24 @@
             {{ if not request.function == "projects": }}
             <script src='{{=URL("static","js/bootstrap-editable.min.js")}}'></script>
             <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
-            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
+            <script src='{{=URL("static","js/urlize.js")}}'></script>
             <script src='{{=URL("static","js/date.format.js")}}'></script>
+            <!-- chat -->
+            {{include "default/chat.html"}}
+            <button class="call_chat button_chat btn btn-success" alt="Chat" title="Chat"><i class="icon-comment-alt"></i> Chat</button>
+            <script src='{{=URL("static","js/chat.js")}}'></script>
+            <!-- call realtime JS -->
+            <script>
+                var infoGlobal = {
+                        project_id : '{{=request.args(0)}}',
+                    };
+            </script>
+            <script src='{{=URL("static","js/realtime.js")}}'></script>
             {{ pass }}
 
             {{ if request.function == "product_backlog": }}
-            <script async defer src='{{=URL("static","js/product_backlog.js")}}'></script>
+            <script src='{{=URL("static","js/product_backlog.js")}}'></script>
             {{ elif request.function == "board": }}
-            <script src='{{=URL("static","js/urlize.js")}}'></script>
             <script src='{{=URL("static","js/board.js")}}'></script>
             <script src='{{=URL("static","js/board-editable.js")}}'></script>
             <script src='{{=URL("static","js/board-card.js")}}'></script>
@@ -150,8 +163,7 @@
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
             <script src='{{=URL("static","js/board-livesearch.js")}}'></script>
             <script src='{{=URL("static","js/floatfixed.js")}}'></script>
-            <!-- chat -->
-            <script src='{{=URL("static","js/chat.js")}}'></script>
+            <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
 
             {{ elif request.function == "projects": }}
             <script async defer src='{{=URL("static","js/delete_project.js")}}'></script>
@@ -166,14 +178,6 @@
             <script src='{{=URL("static","js/team.js")}}'></script>
             {{ pass }}
 
-            <!-- call realtime JS -->
-            <script>
-                var project_id = "{{=request.args(0)}}",
-                    txtGlobal = {
-                        titleNotification : '{{=T("New message from")}}',
-                    };
-            </script>
-            <script src='{{=URL("static","js/realtime.js")}}'></script>
 
             <!-- UserVoice JavaScript SDK (only needed once on a page) -->
             <script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/Bi2xqa4NNvPpiavFveZsdA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
