--- a/views/default/header.html
+++ b/views/default/header.html
@@ -44,7 +44,7 @@
                 {{p_count += 1}}
                 {{pass}}
             {{pass}}
-            {{for i in all_projects["shared_with_person"]:}}
+            {{for i in all_projects["all_shared_with_person"]:}}
                 {{if p_count <= 10:}}
                     <li class='{{=g_current_page("default/%s/%s" %(request.function,i.project_id),"active")}}'><a href='{{=URL(c="default",f="board",args=[i.project_id])}}' class="list-projects tip-bottom" alt='{{=i.project_id.name}}' title='{{=i.project_id.name}}'>{{=p_count}}</a></li>
                 {{p_count += 1}}
@@ -66,10 +66,10 @@
                         {{pass}}
                         </ul>
                     {{pass}}
-                    {{if all_projects["shared_with_person"]:}}
-                        <h3>{{=T('Projects that I am part')}} <span class="label">{{=len(all_projects["shared_with_person"])}}</span></a></h3>
+                    {{if all_projects["all_shared_with_person"]:}}
+                        <h3>{{=T('Projects that I am part')}} <span class="label">{{=len(all_projects["all_shared_with_person"])}}</span></a></h3>
                         <ul>
-                        {{for i in all_projects["shared_with_person"]:}}
+                        {{for i in all_projects["all_shared_with_person"]:}}
                             <li><a href='{{=URL(c="default",f="product_backlog",args=[i.project_id])}}'>{{=i.project_id.name}}</a></li>
                         {{pass}}
                         </ul>
